# kingsick-mk4

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  AGENTS.md  Dockerfile  Dockerfile.dev  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 18bdc444226f_initial_migration.py  201b679bd451_add_pnl_columns_to_backtest_trades.py  635ccf22908b_add_telegram_fields_to_user_and_.py  a1b2c3d4e5f6_add_watchlist_items_table.py  c7d8e9f0a1b2_add_slack_webhook_url_to_user.py  d1e2f3a4b5c6_add_backtest_tables.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/ai/: bnf_strategy.py
backend/app/api/: AGENTS.md  analysis.py  api_keys.py  auth.py  backtest.py  dependencies.py  indicators.py  invitations.py  positions.py  scanner.py  schemas.py  signals.py  slack.py  stocks.py  telegram.py  trades.py  trading.py  users.py  watchlist.py
backend/app/models/: __init__.py  backtest.py  telegram_link.py  user.py  watchlist.py
backend/app/scheduler/: __init__.py  main.py
backend/app/services/: AGENTS.md  __init__.py  ai_recommender.py  alert_store.py  auth.py  backtest_engine.py  encryption.py  indicator.py  kis_api.py  kis_token_cache.py  market_analyzer.py  price_history.py  risk_manager.py  signal_generator.py  slack_service.py  stock_scanner.py  telegram_service.py  trading_engine.py  watchlist.py
backend/tests/: AGENTS.md  conftest.py
backend/tests/integration/: test_api_analysis.py  test_api_auth.py  test_api_backtest.py  test_api_indicators.py  test_api_positions.py  test_api_scanner.py  test_api_signals.py  test_api_slack.py  test_api_telegram.py  test_api_trading.py  test_api_watchlist.py
backend/tests/unit/: test_ai_recommender.py  test_alert_store.py  test_auth.py  test_backtest_engine.py  test_bnf_strategy.py  test_config.py  test_database.py  test_encryption.py  test_indicator.py  test_kis_api.py  test_kis_token_cache.py  test_main.py  test_market_analyzer.py  test_models.py  test_price_history.py  test_risk_manager.py  test_slack_service.py  (+5 more)
(+111 files in other folders)
